--- a/Laba 6.1
+++ b/Laba 6.1
@@ -1,4 +1,4 @@
-***1 часть – написать программу в соответствии со своим вариантом задания. Написать 2 варианта формирования (алгоритмический и с помощью функций Питона), сравнив по времени их выполнение. На плоскости задано К точек. 
+***1 часть – написать программу в соответствии со своим вариантом задания. Написать вариант формирования с помощью функций Питона. На плоскости задано К точек. 
 Сформировать все возможные варианты выбора множества точек из них на проверку того, что они являются вершинами квадрата.***
 
 import itertools
