--- a/Laba 6.2
+++ b/Laba 6.2
@@ -10,41 +10,43 @@ def distance(p1, p2):
     return (p2[0] - p1[0])**2 + (p2[1] - p1[1])**2
 
 def is_square(p1, p2, p3, p4):
-    distances = [distance(p1, p2), distance(p1, p3), distance(p1, p4),
-                 distance(p2, p3), distance(p2, p4), distance(p3, p4)]
+    distances = [distance(p1, p2), distance(p1, p3), distance(p1, p4), distance(p2, p3), distance(p2, p4), distance(p3, p4)]
     distances.sort()
-    return distances[0] > 0 and distances[0] == distances[1] == distances[2] == distances[3] and distances[4] == distances[5]
+    
+    if distances[0] > 0 and distances[0] == distances[1] == distances[2] == distances[3] and distances[4] == distances[5]:
+        side = distances[0]**0.5
+        area = side**2
+        return area
+
+    return 0
 
 def find_squares(points):
     squares = []
+    max_area = 0
+    
     for square in itertools.combinations(points, 4):
-        if all(p[0] == square[0][0] or p[1] == square[0][1] for p in square):
-            if is_square(*square):
+        if is_square(*square):
+            area = is_square(*square)
+            if area > max_area:
+                squares = [square]
+                max_area = area
+            elif area == max_area:
                 squares.append(square)
     return squares
-
-def calculate_total_area(squares):
-    total_area = 0
-    for square in squares:
-        side_length = distance(square[0], square[1])**0.5
-        area = side_length ** 2
-        total_area += area
-    return total_area
 
 def main():
     k = int(input("Введите количество точек: "))
     points = []
+    
     for i in range(k):
         x, y = map(int, input(f"Введите координаты {i+1} точки (через пробел): ").split())
         points.append((x, y))
     
     squares = find_squares(points)
-    print("Возможные вершины квадрата:")
+    
+    print("Возможные вершины квадрата с максимальной площадью:")
     for square in squares:
         print(square)
-    
-    max_area_square = max(squares, key=lambda square: distance(square[0], square[1]))
-    print(f"Максимальная площадь квадрата: {calculate_total_area([max_area_square])}")
 
 if __name__ == "__main__":
     main()
