--- a/Laba 6.2
+++ b/Laba 6.2
@@ -12,39 +12,32 @@ def distance(p1, p2):
 def is_square(p1, p2, p3, p4):
     distances = [distance(p1, p2), distance(p1, p3), distance(p1, p4), distance(p2, p3), distance(p2, p4), distance(p3, p4)]
     distances.sort()
-    
-    if distances[0] > 0 and distances[0] == distances[1] == distances[2] == distances[3] and distances[4] == distances[5]:
-        side = distances[0]**0.5
-        area = side**2
-        return area
+    return distances[0] > 0 and distances[0] == distances[1] == distances[2] == distances[3] and distances[4] == distances[5]
 
-    return 0
+def calculate_area(p1, p2, p3, p4):
+    side = distance(p1, p2)
+    return side**2
 
-def find_squares(points):
+def find_squares(points, limit):
     squares = []
-    max_area = 0
-    
     for square in itertools.combinations(points, 4):
         if is_square(*square):
-            area = is_square(*square)
-            if area > max_area:
-                squares = [square]
-                max_area = area
-            elif area == max_area:
+            if calculate_area(*square) >= limit:
                 squares.append(square)
     return squares
 
 def main():
     k = int(input("Введите количество точек: "))
     points = []
-    
     for i in range(k):
         x, y = map(int, input(f"Введите координаты {i+1} точки (через пробел): ").split())
         points.append((x, y))
     
-    squares = find_squares(points)
+    limit = float(input("Введите минимальное значение площади квадрата: "))
     
-    print("Возможные вершины квадрата с максимальной площадью:")
+    squares = find_squares(points, limit)
+    
+    print("Возможные вершины квадрата:")
     for square in squares:
         print(square)
 
