--- a/Laba 6.2
+++ b/Laba 6.2
@@ -1,8 +1,7 @@
 """2 часть – усложнить написанную программу, введя по своему усмотрению в условие минимум одно ограничение на характеристики объектов (которое будет сокращать количество переборов) 
 и целевую функцию для нахождения оптимального  решения. На плоскости задано К точек. 
 Сформировать все возможные варианты выбора множества точек из них на проверку того, что они являются вершинами квадрата. 
-(В этой программе добавлены ограничение на точки, 
-расположенные на одной оси, и целевую функцию для нахождения квадрата с максимальной площадью.)"""
+(В этой программе добавлены ограничение на значение площади квадрата и целевую функцию для нахождения квадрата с максимальной площадью.)"""
 
 import itertools
 
